# ufw-kde

./: CMakeLists.txt  ChangeLog  Messages.sh  README  TODO  config.h.cmake
doc/: index.docbook
docs/: CMakeLists.txt
docs/en/: CMakeLists.txt
docs/es/: CMakeLists.txt  index.docbook
helper/: CMakeLists.txt  helper.cpp  helper.h  kcm_ufw_helper.py.cmake  ufw.actions
kcm/: CMakeLists.txt  appprofiles.cpp  appprofiles.h  combobox.cpp  combobox.h  kcm.cpp  kcm.h  lineedit.cpp  lineedit.h  logviewer.cpp  logviewer.h  profile.cpp  rule.cpp  rule.h  ruledialog.cpp  ruledialog.h  ruleslist.cpp  ruleslist.h  rulewidget.ui  stackedwidget.cpp  stackedwidget.h  statusbox.cpp  statusbox.h  strings.cpp  strings.h  ufw.desktop  ufw.ui
po/: CMakeLists.txt  es.po  fr.po  generate.sh  kcm_ufw.pot  lt.po
